[package]
name = "marinade-lp-beam"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_lp_beam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = '0.28.0'
anchor-spl = '0.28.0'
marinade-cpi = { git = "https://github.com/sunrise-stake/anchor-gen" }
sunrise_beam = { path = "../sunrise_beam", features = ["cpi"] }