[package]
name = "spl-beam"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_beam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
spl-stake-pool = {version = "0.6.4", features = ["no-entrypoint"] }
sunrise_beam = { path = "../sunrise_beam", features = ["cpi"] }
