[package]
name = "spl-beam"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_beam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = '0.29.0', features = ["init-if-needed"] }
# the stake feature does not compile with solana-program 1.17
#anchor-spl = {  version = '0.29.0', features = ["stake"] }
anchor-spl = '0.29.0'
borsh = "0.10.3"
spl-stake-pool = { git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"] }
sunrise-core = { path = "../sunrise-core", features = ["cpi"] }
once_cell = "1.19.0"

[dev-dependencies]
rstest = "0.18.2"