[package]
name = "sunrise-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sunrise_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = '0.28.0'
anchor-spl = '0.28.0'

[dev-dependencies]
solana-program-test = "=1.16.13"
solana-sdk = "=1.16.13"
thiserror = "1.0.43"

[[test]]
name = "sunrise-beam-integration"
path = "tests/lib.rs"
