[package]
name = "sunrise-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sunrise_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = '0.29.0'
anchor-spl = '0.29.0'

[dev-dependencies]
# Due to compatibility issues between solana-program-test 1.7.* and anchor 0.29.0, we need to use a fork of solana-program-test
# https://github.com/coral-xyz/anchor/pull/2711
solana-program-test = { git = "https://github.com/dankelleher/solana.git", branch = "program-test-hack" }
#solana-program-test = "1.17.12"
solana-sdk = "1.17.12"
thiserror = "1.0.43"

[[test]]
name = "sunrise-beam-integration"
path = "tests/lib.rs"
