[package]
name = "sunrise_beam"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sunrise_beam"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = '0.28.0'
anchor-spl = '0.28.0'

[dev-dependencies]
solana-program-test = "=1.14.17"
solana-sdk = "=1.14.17"
thiserror = "1.0.43"

[[test]]
name = "sunrise-beam-integration"
path = "tests/lib.rs"
